--- a/index.html
+++ b/index.html
@@ -75,6 +75,9 @@
 					<a class="nav-link js-scroll-trigger" href="#team">Our Team</a>
 				  </li>
 				  <li class="nav-item">
+					<a class="nav-link js-scroll-trigger" href="makena-venture-link.html">Link Tree</a>
+				  </li>
+				  <li class="nav-item">
 					<a class="nav-link js-scroll-trigger" href="#contact">Contect Us</a>
 				  </li>
 				  <li class="nav-item">
