--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <!-- Navigation -->
    
 	
-	<section id="home" class="main-banner parallaxie" style="background: url('uploads/makena-ventures.jpg')">
+	<section id="home" class="main-banner parallaxie" style="background: url('uploads/makena-ventures-kenya.JPG')">
 		<nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
 			<div class="container">
 			  <a class="navbar-brand js-scroll-trigger" href="#page-top">
